--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="js/rock-paper-scissors.js"></script>
 </head>
 <body>
-    
+    <button id="rock" class="btn">Rock</button>
+    <button id="paper" class="btn">Paper</button>
+    <button id="scissors" class="btn">Scissors</button>
 </body>
 </html>
