--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
     <button id="rock" class="btn">Rock</button>
     <button id="paper" class="btn">Paper</button>
     <button id="scissors" class="btn">Scissors</button>
+    <div id="scoreBoard">
+        <div id="playerScoreBoard">
+            <div class="label">Player Score</div>
+            <div id="playerScore">0</div>
+        </div>
+        <div id="computerScoreBoard">
+            <div class="label">Computer Score</div>
+            <div id="computerScore">0</div>
+        </div>
+    </div>
 </body>
 </html>
