--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
-    <script src="js/rock-paper-scissors.js"></script>
+    <script src="js/rock-paper-scissors.js" defer></script>
 </head>
 <body>
-    <button id="rock" class="btn">Rock</button>
-    <button id="paper" class="btn">Paper</button>
-    <button id="scissors" class="btn">Scissors</button>
+    <button id="rock" class="playerChoice btn">Rock</button>
+    <button id="paper" class="playerChoice btn">Paper</button>
+    <button id="scissors" class="playerChoice btn">Scissors</button>
+    <div id="outcomeText"></div>
     <div id="scoreBoard">
         <div id="playerScoreBoard">
             <div class="label">Player Score</div>
