--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
     <script src="js/rock-paper-scissors.js" defer></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
+    
 </head>
 <body>
     <button id="rock" class="playerChoice btn">Rock</button>
@@ -22,5 +24,12 @@
             <div id="computerScore">0</div>
         </div>
     </div>
+
+    <footer>
+        <p>Created by <a href="https://kenyachan.dev">Kenya Chan</a></p>
+        <a href="https://github.com/kenyachan/rock-paper-scissors">
+            <i class="fab fa-github"></i>
+        </a>
+    </footer>
 </body>
 </html>
