--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
     <script src="js/rock-paper-scissors.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     
 </head>
 <body>
-    <button id="rock" class="playerChoice btn">Rock</button>
-    <button id="paper" class="playerChoice btn">Paper</button>
-    <button id="scissors" class="playerChoice btn">Scissors</button>
-    <div id="outcomeText"></div>
-    <div id="scoreBoard">
-        <div id="playerScoreBoard">
-            <div class="label">Player Score</div>
-            <div id="playerScore">0</div>
+    <main>
+        <button id="rock" class="playerChoice btn">Rock</button>
+        <button id="paper" class="playerChoice btn">Paper</button>
+        <button id="scissors" class="playerChoice btn">Scissors</button>
+        <div id="outcomeText"></div>
+        <div id="scoreBoard">
+            <div id="playerScoreBoard">
+                <div class="label">Player Score</div>
+                <div id="playerScore">0</div>
+            </div>
+            <div id="computerScoreBoard">
+                <div class="label">Computer Score</div>
+                <div id="computerScore">0</div>
+            </div>
         </div>
-        <div id="computerScoreBoard">
-            <div class="label">Computer Score</div>
-            <div id="computerScore">0</div>
-        </div>
-    </div>
-
+    </main>
     <footer>
         <p>Created by <a href="https://kenyachan.dev">Kenya Chan</a></p>
         <a href="https://github.com/kenyachan/rock-paper-scissors">
