--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     
 </head>
 <body>
+    <header>
+        <h1>Rock, Paper, Scissors</h1>
+    </header>
     <main>
         <button id="rock" class="playerChoice btn">Rock</button>
         <button id="paper" class="playerChoice btn">Paper</button>
