Prevent elments shifting when game over
The 'Play again?' button is appended to the bottom which shifts all
the elements a bit because the css centers all content. A place holder
to preshift the elements so no movement is observed when the button
is appended.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button id="paper" class="playerChoice btn">Paper</button>
             <button id="scissors" class="playerChoice btn">Scissors</button>
         </div>
-        
+        <div id="playAgainPlaceHolder"></div>
     </main>
     <footer>
         <p>Created by <a href="https://kenyachan.dev">Kenya Chan</a></p>
